<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GPStest</string>
    <string name="action_settings">Settings</string>
    <string name="uID_input_message">請輸入個人ID</string>
    <string name="longitude_label">經度：</string>
    <string name="latitude_label">緯度：</string>
    <string name="latlon_default">-</string>
    <string name="stop_button">停止</string>
    <string name="send_button">開始傳送</string>
    <string name="stateDefault">未登入</string>
    <string name="userState">狀態：</string>
    <string name="stateEasy">正常</string>
    <string name="stateBusy">忙碌</string>
    <string name="logout_dialog_title">登出</string>
    <string name="logout_dialog_message">你真的要登出嗎？</string>
    <string name="message_dialog_title">未讀訊息</string>
    <string name="dialog_OK">確定</string>
    <string name="dialog_cancel">取消</string>
    <string name="logout">登出</string>
    <string name="relogin">重新登入</string>
    <string name="message">訊息</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="account">帳號：</string>
    <string name="prompt_account">請輸入帳號</string>
    <string name="password">密碼：</string>
    <string name="prompt_password">請輸入密碼</string>
    <string name="action_sign_in">登入</string>
    <string name="action_cancel">取消</string>
    <string name="action_sign_in_short">登入</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">帳號密碼錯誤</string>
    <string name="error_empty_field">帳號或是密碼不得為空</string>
    <string name="error_invalid_field">帳號或是密碼含有非法字元</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
